--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=VisualAlgo
 
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/mydatabase}
-spring.datasource.username=${DB_USERNAME:myuser}
-spring.datasource.password=${DB_PASSWORD:secret}
+server.port=${PORT:8080}
+
+spring.datasource.url=${JDBC_DATABASE_URL:${SPRING_DATASOURCE_URL:${DB_URL:jdbc:postgresql://localhost:5432/mydatabase}}}
+spring.datasource.username=${JDBC_DATABASE_USERNAME:${SPRING_DATASOURCE_USERNAME:${DB_USERNAME:myuser}}}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD:${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD:secret}}}
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
